poprawka, nie dzialała kolejność kliknięć

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         </tr>
         <tr>
             <td>Walo</td>
-            <td><button class="data">&#xBB;</button></td>
+            <td><button class="data" data-id="1">&#xBB;</button></td>
             <td class="difference"></td>
             <td></td>
         </tr>
         <tr>
             <td>Spejson</td>
-            <td><button class="data">&#xBB;</button></td>
+            <td><button class="data" data-id="2">&#xBB;</button></td>
             <td class="difference"></td>
             <td></td>
         </tr>
         <tr>
             <td>Wojtas</td>
-            <td><button class="data">&#xBB;</button></td>
+            <td><button class="data" data-id="3">&#xBB;</button></td>
             <td class="difference"></td>
             <td></td>
         </tr>
